<?xml version='1.0' encoding='utf-8'?>
<resources>
    <string name="app_name">약효일지</string>
    <string name="title_activity_main">약효일지</string>
    <string name="package_name">kr.parkinson.medicationdiary</string>
    <string name="custom_url_scheme">kr.parkinson.medicationdiary</string>

    <!-- 홈 화면 위젯 -->
    <string name="widget_app_title">파킨슨 약효 기록</string>
    <string name="widget_plus">+10</string>
    <string name="widget_minus">-10</string>
    <string name="widget_record">기록</string>
    <string name="widget_open_app">앱 열기</string>
    <string name="widget_no_record">기록 없음</string>
    <string name="widget_last_record_prefix">마지막 기록</string>
    <string name="widget_description">현재 출력값을 홈 화면에서 바로 기록합니다</string>
    <string name="widget_trend_title">지금 느낌</string>
    <string name="widget_trend_rising">↑상승중</string>
    <string name="widget_trend_stable">=유지중</string>
    <string name="widget_trend_falling">↓하락중</string>
    <string name="widget_quick_title">⚡ 빠른 기록</string>
    <string name="widget_quick_widget_title">약효 빠른 기록</string>
    <string name="widget_quick_description">임시기록·증상·생활·메모를 홈 화면에서 바로 남기거나 엽니다</string>
    <string name="widget_quick_tempnote">🕐임시기록</string>
    <string name="widget_quick_symptom">⚡증상</string>
    <string name="widget_quick_life">🍴생활</string>
    <string name="widget_quick_note_title">임시 기록</string>
    <string name="widget_quick_note">🕐느낌메모</string>
    <string name="widget_quick_score">📋점수매기기</string>
</resources>
